# ai_red_teaming

./: .gitignore
module_examples/deepteam/: README.md  deepteam_tutorial.ipynb
module_examples/garak/: README.md  garak_tutorial.ipynb
module_examples/giskard/: README.md  giskard_tutorial.ipynb
module_examples/promptfoo/: README.md  promptfoo_redteam_tutorial.ipynb
module_examples/pyrit/: README.md  pyrit_tutorial.ipynb
red_team/: TUTORIAL_TEMPLATE.md  deepteam-tutorial.md  garak-tutorial.md  giskard-tutorial.md  promptfoo-tutorial.md  pyrit-tutorial.md
red_teaming/: .env.example  .gitignore  AI_RedTeaming_Asset_Design.md  Makefile  ONBOARDING.md  README.md  package.json  pyproject.toml  requirements.txt  setup.py
red_teaming/config/: settings.yaml
red_teaming/config/targets/: chat_endpoint.yaml
red_teaming/examples/: mock_endpoint.py  smoke_test.py
red_teaming/redteam_core/: __init__.py  report.py  seeds.py  targets.py
red_teaming/redteam_core/adapters/: __init__.py  http_target.py
red_teaming/seeds/: README.md
red_teaming/setups/1_easy/: README.md  garak_rest.json  promptfooconfig.yaml  run.sh
red_teaming/setups/2_python/: README.md  attacks_deepteam.py  run.py  scan_giskard.py  scorers_deepeval.py  target_bridge.py
red_teaming/setups/3_sophisticated/: README.md  pyrit_target.py  run.py
red_teaming/setups/3_sophisticated/orchestrators/: __init__.py  multi_turn.py  single_turn.py
red_teaming/setups/3_sophisticated/scorers/: __init__.py  deepeval_scorer.py
